cmake_minimum_required(VERSION 2.8.12)

project(white_belt_week_3)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/week_3)

add_executable("week3_alg_int_sort" alg_int_sort.cpp)
add_executable("week3_alg_str_sort" alg_str_sort.cpp)
add_executable("week3_class_sorted_strings" class_sorted_strings.cpp)
add_executable("week3_class_person_1" class_person_1.cpp)
add_executable("week3_class_person_2" class_person_2.cpp)
add_executable("week3_class_reversible_string" class_reversible_string.cpp)
add_executable("week3_class_person_3" class_person_3.cpp)
add_executable("week3_class_incognizable" class_incognizable.cpp)
